--- a/.gitattributes
+++ b/.gitattributes
@@ -1,10 +1,16 @@
 # Start of script
+
 # .gitattributes
 # This file defines what languages can show up in the GitHub linguist menu (the menu that tells you what percentage each language is using up on this project.
 # Some non-programming languages must be included manually with this file. Want to create your own? Do something similar to what is done here, and name the file
 # .gitattributes
 # and nothing else, no characters before, no characters after
+
 # Start of linguist script
+
+# ABC
+*.abc linguist-detectable=true
+*.abc linguist-documentation=false
 # Ada
 *.ada linguist-detectable=true
 *.ada linguist-documentation=false
@@ -17,6 +23,12 @@
 # ActionScript/AngelScript
 *.as linguist-detectable=true
 *.as linguist-documentation=false
+# ASP (Action Server Pages)
+*.asp linguist-detectable=true
+*.asp linguist-documentation=false
+# ASP.NET (Action Server Pages DOT NET)
+*.aspx linguist-detectable=true
+*.aspx linguist-documentation=false
 # AWK
 *.awk linguist-detectable=true
 *.awk linguist-documentation=false
@@ -84,6 +96,19 @@
 # Crystal
 *.cr linguist-detectable=true
 *.cr linguist-documentation=false
+# Common Lisp
+*.lisp linguist-detectable=true
+*.lisp linguist-documentation=false
+# Clojure
+*.edn linguist-detectable=true
+*.edn linguist-documentation=false
+*.clj linguist-detectable=true
+*.clj linguist-documentation=false
+# Docker
+*.dockerfile linguist-detectable=true
+*.dockerfile linguist-documentation=false
+*.docker linguist-detectable=true
+*.docker linguist-documentation=false
 # Dhali
 *.dhali linguist-detectable=true
 *.dhali linguist-documentation=false
@@ -110,6 +135,11 @@
 *.ex linguist-documentation=false
 *.exs linguist-detectable=true
 *.exs linguist-documentation=false
+# Emacs Lisp
+*.el linguist-detectable=true
+*.el linguist-documentation=false
+*.elc linguist-detectable=true
+*.elc linguist-documentation=false
 # Freemarker
 *.ftl linguist-detectable=true
 *.ftl linguist-documentation=false
@@ -153,6 +183,12 @@
 *.groovy linguist-documentation=false
 *.gy linguist-detectable=true
 *.gy linguist-documentation=false
+# Gherkin
+*.feature linguist-detectable=true
+*.feature linguist-documentation=false
+# HandleBars
+*.hbs linguist-detectable=true
+*.hbs linguist-documentation=false
 # Hack (Facebook)
 *.hack linguist-detectable=true
 *.hack linguist-documentation=false
@@ -170,6 +206,10 @@
 *.xhtm linguist-documentation=false
 *.xhtml linguist-detectable=true
 *.xhtml linguist-documentation=false
+*.mhtm linguist-detectable=true
+*.mhtm linguist-documentation=false
+*.mhtml linguist-detectable=true
+*.mhtml linguist-documentation=false
 # INI
 *.ini linguist-detectable=true
 *.ini linguist-documentation=false
@@ -188,6 +228,12 @@
 # Inform 7
 *.i7 linguist-detectable=true
 *.i7 linguist-documentation=false
+# Isabelle
+*.thy linguist-detectable=true
+*.thy linguist-documentation=false
+# Intel Hex Binary
+*.hex linguist-detectable=true
+*.hex linguist-documentation=false
 # J
 *.j linguist-detectable=true
 *.j linguist-documentation=false
@@ -208,6 +254,9 @@
 # JSON
 *.json linguist-detectable=true
 *.json linguist-documentation=false
+# JSSS
+*.jsss linguist-detectable=true
+*.jsss linguist-documentation=false
 # Julia
 *.jl linguist-detectable=true
 *.jl linguist-documentation=false
@@ -236,16 +285,25 @@
 # LFE (LISP Flavored Erlang)
 *.lfe linguist-detectable=true
 *.lfe linguist-documentation=false
+# Less
+*.less linguist-detectable=true
+*.less linguist-documentation=false
 # Makefile (GNU Make)
 *.mk linguist-detectable=true
 *.mk linguist-documentation=false
 *.makefile linguist-detectable=true
 *.makefile linguist-documentation=false
 # Mathematica
-*.m linguist-detectable=true
-*.m linguist-documentation=false
-*.nb linguist-detectable=true
+# *.m linguist-detectable=true
+# *.m linguist-documentation=false
+# *.nb linguist-detectable=true
+# *.nb linguist-documentation=false
+# Temporary (until JavaScript or another language reaches 33% or higher)
+# I don't want Mathematica to be the top language for this project, but due to new Mathematica support, it was, so I had to turn it off for now
+*.nb linguist-detectable=false
 *.nb linguist-documentation=false
+*.m linguist-detectable=false
+*.m linguist-documentation=false
 # M4
 *.m4 linguist-detectable=true
 *.m4 linguist-documentation=false
@@ -279,6 +337,9 @@
 # Nix (package format)
 *.nix linguist-detectable=true
 *.nix linguist-documentation=false
+# Nunjucks
+*.njk linguist-detectable=true
+*.njk linguist-documentation=false
 # Objective-C
 *.m linguist-detectable=true
 *.m linguist-documentation=false
@@ -395,9 +456,27 @@
 # Shell
 *.sh linguist-detectable=true
 *.sh linguist-documentation=false
+# Subrip Text
+*.srt linguist-detectable=true
+*.srt linguist-documentation=false
+# SASS
+*.sass linguist-detectable=true
+*.sass linguist-documentation=false
+# SCSS
+*.scss linguist-detectable=true
+*.scss linguist-documentation=false
+# Stylus
+*.styl linguist-detectable=true
+*.styl linguist-documentation=false
 # Swift
 *.swift linguist-detectable=true
 *.swift linguist-documentation=false
+# SREC (Motorola S-RECORD)
+*.mot linguist-detectable=true
+*.mot linguist-documentation=false
+# SXML
+*.sxml linguist-detectable=true
+*.sxml linguist-documentation=false
 # SystemVerilog
 *.sv linguist-detectable=true
 *.sv linguist-documentation=false
@@ -450,6 +529,9 @@
 # Visual Basic Dot Net
 *.vb linguist-detectable=true
 *.vb linguist-documentation=false
+# Vue.JS
+*.vue linguist-detectable=true
+*.vue linguist-documentation=false
 # WebAssembly
 *.wat linguist-detectable=true
 *.wat linguist-documentation=false
@@ -467,17 +549,26 @@
 *.xslt linguist-detectable=true
 *.xslt linguist-documentation=false
 # XML
-*.xml linguist-detectable=true
+# Disabled on Wednesday, August 25th 2021 at 3:05 pm, as it overtook all other languages
+*.xml linguist-detectable=false
 *.xml linguist-documentation=false
 # YAML
 *.yml linguist-detectable=true
 *.yml linguist-documentation=false
 *.yaml linguist-detectable=true
 *.yaml linguist-documentation=false
+# YACC
+*.yacc linguist-detectable=true
+*.yacc linguist-documentation=false
+# ZenScript
+*.zs linguist-detectable=true
+*.zs linguist-documentation=false
 
 # End of linguist script
+
 # File info
-# File type: .gitattributes file
-# File version: 1 (Wednesday, August 25th 2021 at 2:04 pm)
-# Line count (including blank lines and compiler line): 484
+# File type: Git attributes file (*.gitattributes)
+# File version: 2 (Wednesday, August 25th 2021 at 4:04 pm)
+# Line count (including blank lines and compiler line): 575
+
 # End of script
