--- a/.gitattributes
+++ b/.gitattributes
@@ -553,9 +553,10 @@
 *.xml linguist-detectable=false
 *.xml linguist-documentation=false
 # YAML
-*.yml linguist-detectable=true
+# Temporarily disabling, as of Thursday, 2021 December 16th, as it overtook all other languages.
+*.yml linguist-detectable=false
 *.yml linguist-documentation=false
-*.yaml linguist-detectable=true
+*.yaml linguist-detectable=false
 *.yaml linguist-documentation=false
 # YACC
 *.yacc linguist-detectable=true
@@ -568,7 +569,7 @@
 
 # File info
 # File type: Git attributes file (*.gitattributes)
-# File version: 2 (Wednesday, August 25th 2021 at 4:04 pm)
+# File version: 3 (Thursday, 2021 December 16th at 3:47 pm)
 # Line count (including blank lines and compiler line): 575
 
 # End of script
