2 sub-directories [16 files]

--- a/K.desktop
+++ b/K.desktop
@@ -13,6 +13,6 @@ Comment=Short Description Of Your App
 Categories=Qt;KDE;
 # File info
 # File type: KDE desktop file (*.desktop)
-# File version: 1 (Tuesday, December 14th at 2:37 pm)
+# File version: 1 (2021, Tuesday, December 14th at 4:05 pm)
 # Line count (including blank lines and compiler line): 19
 # End of script
